<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">The page could not be opened because the URL is invalid.</string>
    <string name="httpErrorUnsupportedScheme">The protocol is not supported.</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="config_tether_apndata" />
    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="month_long_standalone_january">January</string>
    <string name="month_long_standalone_february">February</string>
    <string name="month_long_standalone_march">March</string>
    <string name="month_long_standalone_april">April</string>
    <string name="month_long_standalone_may">May</string>
    <string name="month_long_standalone_june">June</string>
    <string name="month_long_standalone_july">July</string>
    <string name="month_long_standalone_august">August</string>
    <string name="month_long_standalone_september">September</string>
    <string name="month_long_standalone_october">October</string>
    <string name="month_long_standalone_november">November</string>
    <string name="month_long_standalone_december">December</string>
    <string name="month_long_january">January</string>
    <string name="month_long_february">February</string>
    <string name="month_long_march">March</string>
    <string name="month_long_april">April</string>
    <string name="month_long_may">May</string>
    <string name="month_long_june">June</string>
    <string name="month_long_july">July</string>
    <string name="month_long_august">August</string>
    <string name="month_long_september">September</string>
    <string name="month_long_october">October</string>
    <string name="month_long_november">November</string>
    <string name="month_long_december">December</string>
    <string name="month_medium_january">Jan</string>
    <string name="month_medium_february">Feb</string>
    <string name="month_medium_march">Mar</string>
    <string name="month_medium_april">Apr</string>
    <string name="month_medium_may">May</string>
    <string name="month_medium_june">Jun</string>
    <string name="month_medium_july">Jul</string>
    <string name="month_medium_august">Aug</string>
    <string name="month_medium_september">Sep</string>
    <string name="month_medium_october">Oct</string>
    <string name="month_medium_november">Nov</string>
    <string name="month_medium_december">Dec</string>
    <string name="month_shortest_january">J</string>
    <string name="month_shortest_february">F</string>
    <string name="month_shortest_march">M</string>
    <string name="month_shortest_april">A</string>
    <string name="month_shortest_may">M</string>
    <string name="month_shortest_june">J</string>
    <string name="month_shortest_july">J</string>
    <string name="month_shortest_august">A</string>
    <string name="month_shortest_september">S</string>
    <string name="month_shortest_october">O</string>
    <string name="month_shortest_november">N</string>
    <string name="month_shortest_december">D</string>
    <string name="day_of_week_long_sunday">Sunday</string>
    <string name="day_of_week_long_monday">Monday</string>
    <string name="day_of_week_long_tuesday">Tuesday</string>
    <string name="day_of_week_long_wednesday">Wednesday</string>
    <string name="day_of_week_long_thursday">Thursday</string>
    <string name="day_of_week_long_friday">Friday</string>
    <string name="day_of_week_long_saturday">Saturday</string>
    <string name="day_of_week_medium_sunday">Sun</string>
    <string name="day_of_week_medium_monday">Mon</string>
    <string name="day_of_week_medium_tuesday">Tue</string>
    <string name="day_of_week_medium_wednesday">Wed</string>
    <string name="day_of_week_medium_thursday">Thu</string>
    <string name="day_of_week_medium_friday">Fri</string>
    <string name="day_of_week_medium_saturday">Sat</string>
    <string name="day_of_week_short_sunday">Su</string>
    <string name="day_of_week_short_monday">Mo</string>
    <string name="day_of_week_short_tuesday">Tu</string>
    <string name="day_of_week_short_wednesday">We</string>
    <string name="day_of_week_short_thursday">Th</string>
    <string name="day_of_week_short_friday">Fr</string>
    <string name="day_of_week_short_saturday">Sa</string>
    <string name="day_of_week_shortest_sunday">S</string>
    <string name="day_of_week_shortest_monday">M</string>
    <string name="day_of_week_shortest_tuesday">T</string>
    <string name="day_of_week_shortest_wednesday">W</string>
    <string name="day_of_week_shortest_thursday">T</string>
    <string name="day_of_week_shortest_friday">F</string>
    <string name="day_of_week_shortest_saturday">S</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="hour_minute_24">%H:%M</string>
    <string name="hour_minute_ampm">%-l:%M%p</string>
    <string name="hour_minute_cap_ampm">%-l:%M%^p</string>
    <string name="twelve_hour_time_format">h:mm a</string>
    <string name="twenty_four_hour_time_format">HH:mm</string>
    <string name="numeric_date">%-m/%-e/%Y</string>
    <string name="numeric_date_format">M/d/yyyy</string>
    <string name="numeric_date_template">%s/%s/%s</string>
    <string name="month_day_year">%B %-e, %Y</string>
    <string name="time_of_day">%-l:%M:%S %p</string>
    <string name="date_and_time">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="time_date">%1$s, %3$s</string>
    <string name="abbrev_month_day_year">%b %-e, %Y</string>
    <string name="month_day">%B %-e</string>
    <string name="month">%-B</string>
    <string name="month_year">%B %Y</string>
    <string name="abbrev_month_day">%b %-e</string>
    <string name="abbrev_month">%-b</string>
    <string name="abbrev_month_year">%b %Y</string>
    <string name="time1_time2">%1$s – %2$s</string>
    <string name="date1_date2">%2$s – %5$s</string>
    <string name="numeric_md1_md2">%2$s/%3$s – %7$s/%8$s</string>
    <string name="numeric_wday1_md1_wday2_md2">%1$s, %2$s/%3$s – %6$s, %7$s/%8$s</string>
    <string name="numeric_mdy1_mdy2">%2$s/%3$s/%4$s – %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_wday2_mdy2">%1$s, %2$s/%3$s/%4$s – %6$s, %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s/%3$s/%4$s, %5$s – %6$s, %7$s/%8$s/%9$s, %10$s</string>
    <string name="numeric_md1_time1_md2_time2">%2$s/%3$s, %5$s – %7$s/%8$s, %10$s</string>
    <string name="numeric_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s/%3$s, %5$s – %6$s, %7$s/%8$s, %10$s</string>
    <string name="numeric_mdy1_time1_mdy2_time2">%2$s/%3$s/%4$s, %5$s – %7$s/%8$s/%9$s, %10$s</string>
    <string name="wday1_date1_time1_wday2_date2_time2">%1$s, %2$s, %3$s – %4$s, %5$s, %6$s</string>
    <string name="wday1_date1_wday2_date2">%1$s, %2$s – %4$s, %5$s</string>
    <string name="date1_time1_date2_time2">%2$s, %3$s – %5$s, %6$s</string>
    <string name="time_wday_date">%1$s, %2$s, %3$s</string>
    <string name="wday_date">%2$s, %3$s</string>
    <string name="time_wday">%1$s, %2$s</string>
    <string name="same_year_md1_md2">%2$s %3$s – %7$s %8$s</string>
    <string name="same_year_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_month_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_year_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_month_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_year_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_year_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s, %4$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="same_month_md1_md2">%2$s %3$s – %8$s</string>
    <string name="same_month_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_mdy1_mdy2">%2$s %3$s – %7$s %8$s, %9$s</string>
    <string name="same_month_mdy1_mdy2">%2$s %3$s – %8$s, %9$s</string>
    <string name="same_year_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="short_format_month">%b</string>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="abbrev_wday_month_day_year">EEE, MMM d, yyyy</string>
    <string name="common_name_prefixes" />
    <string name="common_name_suffixes" />
    <string name="common_last_name_prefixes" />
    <string name="common_name_conjunctions" />
    <string name="default_text_encoding">Latin-1</string>
    <string name="lock_pattern_view_aspect">square</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s%2$s</string>
    <string name="ellipsis">…</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_traffic_title">手机数据监控，正在运行...</string>
    <string name="status_bar_battery_low_notification_button">省电设置</string>
    <string name="status_bar_button_wifi">WIFI</string>
    <string name="status_bar_button_apn">数据</string>
    <string name="status_bar_button_bluetooth">蓝牙</string>
    <string name="status_bar_button_rotate">旋转</string>
    <string name="status_bar_button_brightness">亮度</string>
    <string name="status_bar_button_ringer_normal">声音</string>
    <string name="status_bar_button_gps">GPS</string>
    <string name="status_bar_button_sync">同步</string>
    <string name="status_bar_button_cpu">CPU降频</string>
    <string name="status_bar_button_vibrate">震动</string>
    <string name="status_bar_button_flight_mode">飞行模式</string>
    <string name="status_bar_button_lock">锁屏</string>
    <string name="status_bar_button_torch">手电</string>
    <string name="status_bar_button_reboot">重启</string>
    <string name="status_bar_button_shutdown">关机</string>
</resources>